--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ edition = "2021"
 anyhow = "1.0.75"
 chrono = "0.4.31"
 clap = { version = "4.4.11", features = ["derive"] }
+log = "0.4.20"
 polars = { version = "0.35.4", features = ["lazy","diff","strings","polars-io"] }
+pretty_env_logger = "0.5.0"
 serde = "1.0.193"
 serde_derive = "1.0.193"
 serde_json = "1.0.108"
