--- a/webpage/package.json
+++ b/webpage/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^10.7.0",
+    "animate.css": "^4.1.1",
     "ant-design-vue": "^4.0.8",
+    "axios": "^1.6.2",
     "chalk": "^5.3.0",
+    "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
     "prettier": "^3.1.1",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
